# Gamma

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Gamma.cbp  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj.filters
Demo/: CMakeLists.txt  Demo.vcxproj.filters  INSTALL.vcxproj.filters
Demo/src/: Main.cpp
Gamma/: CMakeLists.txt  Gamma.vcxproj.filters  INSTALL.vcxproj.filters
Gamma/src/: Gamma.h
Gamma/src/Gamma/: Gamma.cpp  Gamma.h
Gamma/src/Gamma/Core/: Log.cpp  Log.h  SharedReference.cpp  SharedReference.h
Gamma/src/Gamma/Renderer/: Factory.h  Mesh.h  Renderer.cpp  Renderer.h  Vertex.cpp  Vertex.h
Gamma/src/Gamma/Renderer/Direct3D10/: Renderer.cpp  Renderer.h
Gamma/src/Gamma/Renderer/Direct3D11/: Renderer.cpp  Renderer.h
Gamma/src/Gamma/Renderer/Direct3D12/: Context.cpp  Context.h  Renderer.cpp  Renderer.h
Gamma/src/Gamma/Renderer/Direct3D9/: Renderer.cpp  Renderer.h
Gamma/src/Gamma/Renderer/DirectXGraphicsInfrastructure/: SwapChain.h
Gamma/src/Gamma/Renderer/OpenGL/: Buffer.h  Factory.cpp  Factory.h  Handle.cpp  Handle.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
Gamma/src/Gamma/Renderer/Vulkan/: Device.cpp  Device.h  Instance.cpp  Instance.h  SwapChain.cpp  SwapChain.h
Gamma/src/Gamma/Win32/: Debug.cpp  Debug.h  Direct3DUtils.cpp  Direct3DUtils.h
Gamma/src/Gamma/Window/: Window.cpp  Window.h
Gamma/src/Window/: Window.h
